# keyboard-firmware

./: CMakeLists.txt  arm.cmake
board/host-test/: CMakeLists.txt  TestMatrix.h  TestPin.h  config.h
board/j6t/: CMakeLists.txt  config.h  j6t.cpp
board/mpad6/: CMakeLists.txt  config.h  mpad6.cpp
include/action/: action.h  keycode.h  map.h
include/common/: Matrix.h  MatrixConfig.h  USBBuffer.h
include/scan/: scan.h
src/: CMakeLists.txt
src/action/: CMakeLists.txt  action.cpp
src/app/keyboard/: CMakeLists.txt  keyboard.cpp
src/scan/: CMakeLists.txt  scan.cpp
